--- a/firmware/printer-test/platformio.ini
+++ b/firmware/printer-test/platformio.ini
@@ -8,13 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-c3-devkitm-1]
-platform = espressif32
-board = esp32-c3-devkitm-1
+[env:sparkfun_pro_micro_esp32c3]
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/54.03.20/platform-espressif32.zip
+board = sparkfun_pro_micro_esp32c3
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit Thermal Printer Library@^1.4.1
-monitor_speed = 115200
+monitor_speed = 9600
 upload_speed = 921600
 board_flags = 
 	-D ARDUINO_USB_CDC_ON_BOOT=1
